--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -118,6 +118,12 @@ a:link, a:active, a:visited
 	text-decoration: none;
 }
 
+input.claroButton
+{
+	margin: 0px;
+	padding: 4px 2px 2px 2px;
+}
+
 a.claroButton
 {
 	color:Black;
