--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -98,6 +98,11 @@ a img
 	border: 0px;
 	text-decoration: none;
 }
+a | img
+{
+	border: 0px;
+	text-decoration: none;
+}
 
 a:link, a:active, a:visited
 {
