form to modify users uniformisation

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -156,3 +156,46 @@ a.claroButton
 {
     color:gray
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.claroTopBanner {   }
+
+.claroTopBanner a {text-decoration:none}
+.claroTopBanner a:hover {text-decoration:underline}
+
+.claroTopBanner .campusLine {background-color:#000066; color:white;}
+
+.claroTopBanner .campusLine a {color:white;}
+
+.claroTopBanner td { border-top:  solid White 1px }
