Add a series of rules for the css, mainly for the claroline banner

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -1,201 +1,321 @@
-body,h1,h2,h3,h4,h5,h6,p,blockquote,td,ol,ul {font-family: arial, helvetica, sans-serif;}
-.topBanner a { text-decoration:none }
-.topBanner a:hover { text-decoration:underline;color:white}
-.topBanner td { border-top:  solid White 1px }
-.alternativeBgLight { background-color: #F5F5F5; }
-.alternativeBgDark 	{ background-color: #E6E6E6; }
-.forms 		{ background-color : #E6E6E6; letter-spacing: normal; text-align: justify; text-indent: 3pt; word-spacing: normal; padding-top: 2px; padding-right: 5px; padding-bottom: 2px; padding-left: 5px ; }
-.formsTips	{ text-align: justify; text-indent: 15pt; word-spacing: normal; }
-INPUT.forms	{ letter-spacing: normal; text-align: justify; text-indent: 3pt;	word-spacing: normal;	padding-top: 0px;	padding-right: 0px;	padding-bottom: 0px;	padding-left: 0px;}
-.warn {	border: thin double Silver;	margin-left: 15px;	margin-right: 15px;  font-family: serif;  color: Red;  padding-left: 25px;    }
-.typeElement {border: thin sol id #E6E6E6;
-margin-left: 15px;	margin-right: 25px;
-padding-left: 25px;
-color:#003399 }
-.claro_listInTable tr:hover {background-color: #CCCCCC;}
+/******************************************************************************
+                              MAIN HTML TAGS STYLE
+ ******************************************************************************/
+
+body {
+	font-family: arial, helvetica, sans-serif;
+	background-color: #FFFFFF;
+}
+
+a:link, a:active, a:visited {
+	color: #000066;
+}
+
+a img {
+	border:none;
+	text-decoration: none;
+}
+
+a | img {
+	border: 0px;
+	text-decoration: none;
+}
+
+/******************************************************************************
+                              CLAROLINE TOP BANNER
+ ******************************************************************************/
+
+ 
+ /*----------------------------------------------------------------------------
+                              MAIN BANNER SETTINGS
+ ----------------------------------------------------------------------------*/
+ 
+.claroTopBanner {
+}
+
+/*
+ * ANCHORS BEHAVIOUR
+ */
+ 
+.claroTopBanner a {
+	text-decoration:none
+}
+.claroTopBanner a:hover {
+	text-decoration:underline
+}
+
+/*
+ * BORDER BEHAVIOR
+ *
+ * Note : Maybe you should change the color parameter
+ * if you aim to change the page background color
+ */
+
+.claroTopBanner .platformBanner td, 
+.claroTopBanner .userBanner td  ,
+.claroTopBanner .courseBanner td { 
+	border-top:  solid White 1px
+}
 
 
-/* Claroline table style */
+ /*----------------------------------------------------------------------------
+                                  CAMPUS LINE
+ ----------------------------------------------------------------------------*/
 
-.claroTable td, th 
+.claroTopBanner .platformBanner {
+	background-color:#000066;
+	color:white;
+	font-size: 120%;
+	font-weight: bold;
+}
+
+.claroTopBanner .platformBanner  a {
+	color:white;
+}
+
+ /*----------------------------------------------------------------------------
+                                   USER LINE
+ ----------------------------------------------------------------------------*/
+
+.claroTopBanner .userBanner {
+		background-color: #666666;
+		color:white;
+		font-size: 80%;
+		color: #FFFFFF;
+		font-weight:bold;
+		margin-top:1px;
+}
+
+.claroTopBanner .userBanner a {
+		color:white;
+}
+
+ /*----------------------------------------------------------------------------
+                                  COURSE LINE
+ ----------------------------------------------------------------------------*/
+
+.claroTopBanner .courseBanner {
+		background-color: #DDDEBC;
+		color: #003366;
+		font-weight:bold;
+}
+
+.claroTopBanner .courseBanner p {
+	margin: 0px;
+}
+
+.claroTopBanner .courseBanner p .courseName {
+	font-size: 130%;
+}
+
+.claroTopBanner .courseBanner p .courseCode {
+	font-size: 80%;
+}
+
+
+ /*----------------------------------------------------------------------------
+                                  BREAD CRUMB TRAIL
+ ----------------------------------------------------------------------------*/
+
+.claroBreadCrumbTrail {
+	font-size: 80%;
+}
+
+
+
+
+/******************************************************************************
+                              CLAROLINE FOOTER
+ ******************************************************************************/
+
+.claro_footer  
 {
+	background-color: #FFFFF;
+	font-size: 80%;
+}
+
+.claro_footer a, 
+.claro_footer a:visited, 
+.claro_footer a:active {
+	font-size: 80%;		
+}
+	
+.claro_footer a:hover {
+}
+
+
+/******************************************************************************
+                             CLAROLINE TABLE
+ ******************************************************************************/
+
+/* Uniformize claroline table format. The class provide 3 header type
+ *
+ *     - superHeader : allowing to define table title above the column header
+ *     - headerX : define header in the X axis for each column
+ *     - headerY : define header in the Y axis for each rank
+ * 
+ * Example of table using a super header and header in X axis
+ *
+ * <table class="claroTable">
+ * <tr class="superHeader">
+ * <th colspan="3">User Birthdate</th>
+ * </tr>
+ * <tr class="headerX">
+ * <th>Firstname</th>
+ * <th>Lastname</th>
+ * <th>Birthdate</th>
+ * </tr>
+ * 
+ * <tbody>
+ * 
+ * <tr>
+ * <td>Hugues</td>
+ * <td>Peeters</td>
+ * <td>1969-09-27</td>
+ * </tr>
+ * <tr>
+ * ...
+ * </tr>
+ * 
+ * </tbody>
+ * 
+ * </table>
+ * 
+ * Example of table using header in Y axis
+ * 
+ * 
+ * <table class="claroTable">
+ * <tr class="superHeader">
+ * <th colspan="3">User Birthdate</th>
+ * </tr>
+ * 
+ * <tr>
+ * <th class="headerY">Firstname</th>
+ * <td>Hugues</td>
+ * <td> ...  </td>
+ * </tr>
+ * 
+ * <tr>
+ * <th class="headerY">Lastname</th>
+ * <td>Peeters</td>
+ * <td> ...  </td>
+ * </tr>
+ * 
+ * <tr>
+ * <th class="headerY">Birthdate</th>
+ * <td>1969-09-27</td>
+ * <td> ...  </td>
+ * </tr>
+ * 
+ * </table>
+ */
+
+.claroTable td, th {
 	margin:  1px;
 	padding: 4px;
 	border: none;
 }
 
 
-.claroTable .superHeader th,  .claroTable th.superHeader 
-{
+.claroTable .superHeader th, .claroTable th.superHeader {
 	color: #FFFFFF;
 	background-color: #666666;
 	font-weight: bold;
 	text-align: left;
 }
 
-.claroTable .superHeader a
-{
+.claroTable .superHeader a {
 	color: #FFFFFF;
 }
 
 
 .claroTable th.headerY, .claroTable .headerY th, 
-.claroTable th.headerX, .claroTable .headerX th
-{
+.claroTable th.headerX, .claroTable .headerX th {
 	font-weight: normal;
 	text-align: left;
 }
 
-.claroTable .headerX th,  .claroTable th.headerX 
-{
+.claroTable .headerX th,  .claroTable th.headerX {
 	background-color: #DDDEBC;
 }
 
-.claroTable tbody tr:hover {background-color: #E3E3E3;}
-.noHover {background-color: #ffffff;}
+.claroTable tbody tr:hover {
+	background-color: #E3E3E3;
+}
+.noHover {
+	background-color: #ffffff;
+}
 
-.claroIntroSection { background-color: #F5F5F5; }
 
-/* Claroline message box */
+/******************************************************************************
+                             VARIOUS CLAROLINE CSS CLASS
+ ******************************************************************************/
 
-.claroMessageBox
-{
+/*
+ * 'claroMessageBox' is used to display all messages from the platform like 
+ * action confirmation, parameter request, warning mesage...
+ * Things that are usually displayed in a dialog box into offline applications
+ */ 
+ 
+.claroMessageBox {
 	background-color: #FFCC33;
 }
 
-.success
-{
-	margin-left: 15px;
-	margin-right: 15px;
-	padding-left: 25px;
-	background-color: #90FF90
-}
-.info
-{
-	margin-left: 15px;
-	margin-right: 15px;
-	padding-left: 25px;
-	background-color: #CCFF99;
-}
-.warning
-{
-	margin-left: 15px;
-	margin-right: 15px;
-	padding-left: 25px;
-	background-color: #FFCC33;
-}
-.error
-{
-	margin-left: 15px;
-	margin-right: 15px;
-	padding-left: 25px;
-	background-color: #FF6060;
+.claroIntroSection { 
+	background-color: #F5F5F5;
 }
 
-/* Claroline links */
-a img
-{
-	border:none;
-	text-decoration: none;
-}
-a | img
-{
-	border: 0px;
-	text-decoration: none;
-}
+/*
+ * 'invisible' is generally attached to element that shouldn't be visible into 
+ * common user interface but which are visible in course manager or platform 
+ * administrator screen, showing that the element is deactivated or isn't 
+ * visible fo the other users
+ */
 
-
-a:link, a:active, a:visited
-{
-	color: #000066;
-}
-
-
-/*Claroline invisible links */
-
-.invisible 
-{
+.invisible  {
 	color: #999999;
 }
 
-a.invisible, a:link.invisible, a:visited.invisible
-{
+a.invisible, 
+a:link.invisible, 
+a:visited.invisible {
 	color: #999999;
 }
 
-/*.claroButton
-{
-	color:Black;
-	background:	#DDDEBC;
-	border-right: gray 2px solid;
-	border-bottom: gray	2px	solid;
-	border-top:	#eee 2px solid;
-	border-left: #eee 2px solid;
-	padding: 1px 2px 1px 2px;
-	margin: 3px 3px 4px 3px;
-	text-decoration: none;
+/*
+ * 'rightMenu' is mainly use in the platform home page
+ */
+
+.claroRightMenu  {
+	background-color: #DDDEBC;	
+}
+	
+.claroRightMenu a, 
+.claroRightMenu a:visited, 
+.claroRightMenu a:active {
+		
+}
+	
+claroRightMenu a:hover {
+				
 }
 
-a.claroButton {
-	line-height: 200%;
-}
-
-a.claroButton
-{
-	color:Black;
-}
-
-.claroButton:hover
-{
-	cursor:pointer;
-}
-*/
 
 
-.HelpText
-{
+.HelpText {
     color:gray
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.claroTopBanner {   }
-
-.claroTopBanner a {text-decoration:none}
-.claroTopBanner a:hover {text-decoration:underline}
-
-.claroTopBanner .campusLine {background-color:#000066; color:white;}
-
-.claroTopBanner .campusLine a {color:white;}
-
-.claroTopBanner td { border-top:  solid White 1px }
+/*
+ * MOOSH ATTIC -- could be nice if one can put some order here ...
+ */
+ 
+.alternativeBgLight { background-color: #F5F5F5; }
+.alternativeBgDark 	{ background-color: #E6E6E6; }
+.forms 		{ background-color : #E6E6E6; letter-spacing: normal; text-align: justify; text-indent: 3pt; word-spacing: normal; padding-top: 2px; padding-right: 5px; padding-bottom: 2px; padding-left: 5px ; }
+.formsTips	{ text-align: justify; text-indent: 15pt; word-spacing: normal; }
+INPUT.forms	{ letter-spacing: normal; text-align: justify; text-indent: 3pt;	word-spacing: normal;	padding-top: 0px;	padding-right: 0px;	padding-bottom: 0px;	padding-left: 0px;}
+.warn {	border: thin double Silver;	margin-left: 15px;	margin-right: 15px;  font-family: serif;  color: Red;  padding-left: 25px;    }
+.typeElement { border: thin sol id #E6E6E6; margin-left: 15px;	margin-right: 25px;padding-left: 25px;color:#003399 }
+.claro_listInTable tr:hover {background-color: #CCCCCC;}
