--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -4,7 +4,7 @@
 
 body {
 	font-family: arial, helvetica, sans-serif;
-	background-color: #FFFFFF;
+	background-color: white;
 }
 
 a:link, a:active, a:visited {
@@ -81,7 +81,6 @@ a | img {
 		background-color: #666666;
 		color:white;
 		font-size: 80%;
-		color: #FFFFFF;
 		font-weight:bold;
 		margin-top:1px;
 }
@@ -218,14 +217,14 @@ a | img {
 
 
 .claroTable .superHeader th, .claroTable th.superHeader {
-	color: #FFFFFF;
+	color: white;
 	background-color: #666666;
 	font-weight: bold;
 	text-align: left;
 }
 
 .claroTable .superHeader a {
-	color: #FFFFFF;
+	color: white;
 }
 
 
@@ -243,7 +242,7 @@ a | img {
 	background-color: #E3E3E3;
 }
 .noHover {
-	background-color: #ffffff;
+	background-color: white;
 }
 
 
