fine tuning of the css

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -124,6 +124,18 @@ a | img {
 
 
 /******************************************************************************
+                             CLAROLINE BODY
+ ******************************************************************************/
+
+claroBody  {
+
+}
+
+
+
+
+
+/******************************************************************************
                               CLAROLINE FOOTER
  ******************************************************************************/
 
@@ -141,6 +153,8 @@ a | img {
 	
 .claro_footer a:hover {
 }
+
+
 
 
 /******************************************************************************
