fixed a rule in the footer

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -139,8 +139,7 @@ claroBody  {
                               CLAROLINE FOOTER
  ******************************************************************************/
 
-.claroFooter  
-{
+.claroFooter  {
 	background-color: #FFFFF;
 	font-size: 80%;
 }
