Remove not needed background-color attribute in ".claroRightMenu a:hover" class Complete the definition of ".claroRightMenu a" to have the same color, under IE, for visited and not visited links

--- a/claroline/css/orangejuice.css
+++ b/claroline/css/orangejuice.css
@@ -336,14 +336,15 @@ a:visited.invisible {
 	background-color: #ffecce;	
   border:1px solid #666;
 }
-	
-.claroRightMenu a {
+
+.claroRightMenu a,
+.claroRightMenu a:link,
+.claroRightMenu a:visited, {
 		color:#c60;
 }
 	
 .claroRightMenu a:hover {
-		color:#369;		
-    background-color:transparent;
+		color:#369;
 }
 
 
