--- a/claroline/css/orangejuice.css
+++ b/claroline/css/orangejuice.css
@@ -96,7 +96,9 @@ a | img {
 		margin-top:1px;
 }
 
-.claroTopBanner .userBanner a {
+.claroTopBanner .userBanner a,
+.claroTopBanner .userBanner a:link,
+.claroTopBanner .userBanner a:visited {
 		color: #333333;
 }
 .claroTopBanner .userBanner a:hover {
@@ -127,13 +129,14 @@ a | img {
 }
 
 
-.claroTopBanner .courseBanner a {
+.claroTopBanner .courseBanner a,
+.claroTopBanner .courseBanner a:link,
+.claroTopBanner .courseBanner a:visited {
 		color:#c60;
 }
 	
 .claroTopBanner .courseBanner a:hover {
 		color:#369;		
-    background-color:transparent;
 }
  /*----------------------------------------------------------------------------
                                   BREAD CRUMB TRAIL
@@ -143,13 +146,14 @@ a | img {
 	font-size: 80%;
 }
 
-.claroBreadCrumbTrail a {
+.claroBreadCrumbTrail a,
+.claroBreadCrumbTrail a:link,
+.claroBreadCrumbTrail a:visited {
 		color:#c60;
 }
 	
 .claroBreadCrumbTrail a:hover {
 		color:#FFB848;		
-    background-color:transparent;
 }
 
 
@@ -267,7 +271,9 @@ claroBody  {
 	text-align: left;
 }
 
-.claroTable .superHeader a {
+.claroTable .superHeader a,
+.claroTable .superHeader a:link,
+.claroTable .superHeader a:visited {
 	color: white;
 }
 
