--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -288,9 +288,12 @@ claroBody  {
 	color: #999999;
 }
 
-a.invisible, 
-a:link.invisible, 
-a:visited.invisible {
+.invisible a, 
+.invisible a:link, 
+.invisible a:visited,
+a.invisible,
+a:link.invisible,
+a:visited.invisible{
 	color: #999999;
 }
 
