Tune the invisible class, will now work if the class is declared on the link and if when is declared on something containing the link htmlheadXtra for the invisible style can now be removed from file using invisible class

--- a/claroline/css/orangejuice.css
+++ b/claroline/css/orangejuice.css
@@ -327,11 +327,15 @@ claroBody  {
 	color: #999999;
 }
 
-a.invisible, 
-a:link.invisible, 
-a:visited.invisible {
+.invisible a, 
+.invisible a:link, 
+.invisible a:visited,
+a.invisible,
+a:link.invisible,
+a:visited.invisible{
 	color: #999999;
 }
+
 
 /*
  * 'rightMenu' is mainly use in the platform home page
