aqua css style sheet

--- a/claroline/css/aqua.css
+++ b/claroline/css/aqua.css
@@ -329,7 +329,7 @@ claroBody  {
  */ 
  
 .claroMessageBox {
-	background-color: #FF9900;
+  background-color: #B0E0E6;
   color: #000000;
   border:1px solid #666;
 }
