aqua css style sheet

--- a/claroline/css/aqua.css
+++ b/claroline/css/aqua.css
@@ -276,7 +276,7 @@ claroBody  {
 .claroTable .superHeader th, .claroTable th.superHeader {
         
 	color: white;
-	background-color: #cccccc;
+	background-color: #4169E1;
 	font-weight: bold;
 	text-align: left;
 }
