Add correct, error and higlight classes

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -297,6 +297,31 @@ a:visited.invisible{
 	color: #999999;
 }
 
+
+/* 'correct' is attached to element that must be highlighted as correct
+	example : a good score in exercices
+*/
+.correct {
+	color: #009900;
+}
+
+/* 'error' is attached to element that must be highlighted as correct
+	example : a wrong score in exercices
+	example : an error message
+*/
+.error {
+	color: #990000;
+}
+
+/*
+'highlight'
+*/
+.highlight {
+ color: #000066;
+ font-weight: bold;
+}
+
+
 /*
  * 'rightMenu' is mainly use in the platform home page
  */
