--- a/claroline/css/aqua.css
+++ b/claroline/css/aqua.css
@@ -2,31 +2,26 @@
                               MAIN HTML TAGS STYLE
  ******************************************************************************/
 
-body {
-background-color:#E0FFFF;
-color:#000080;
-font-family: tahoma,Verdana,Geneva,Arial,Helvetica,sans-serif;
-font-size: 12px/17px;
-font-weight: bold;
-padding:0;
+body
+{
+	background-color:#E0FFFF;
+	color:#000080;
+	font-family: tahoma,Verdana,Geneva,Arial,Helvetica,sans-serif;
+	font-weight: bold;
+	padding:0;
 }
 
 a:link, a:active, a:visited {
-  color: #4169E1;
-  text-decoration: none;
+	color: #4169E1;
+	text-decoration: none;
 }
 
 a:hover {
-  color: #000000;
+	color: #000;
 }
 
 a img {
 	border:none;
-	text-decoration: none;
-}
-
-a | img {
-	border: 0px;
 	text-decoration: none;
 }
 
@@ -38,142 +33,184 @@ a | img {
  /*----------------------------------------------------------------------------
                               MAIN BANNER SETTINGS
  ----------------------------------------------------------------------------*/
- 
-.claroTopBanner {
-}
 
-/*
- * ANCHORS BEHAVIOUR
- */
- 
-.claroTopBanner a {
-	text-decoration:none
-  color: #33333;
-}
-.claroTopBanner a:hover {
-  color: #000000;
-}
+#topBanner{}
 
-/*
- * BORDER BEHAVIOR
- *
- * Note : Maybe you should change the color parameter
- * if you aim to change the page background color
- */
 
-.claroTopBanner .platformBanner td, 
-.claroTopBanner .userBanner td  ,
-.claroTopBanner .courseBanner td { 
-	border-top:1px solid #E0FFFF;
+#topBanner hr
+{
+	display: none;
 }
-
 
  /*----------------------------------------------------------------------------
                                   CAMPUS LINE
  ----------------------------------------------------------------------------*/
-
-.claroTopBanner .platformBanner {
-	
-	background-color: #0000CD;
+div#platformBanner
+{
+	font-size: 120%;
+	font-weight: bold;
+	color: #FFF;
+	background-color:#000CD;
 	background-image: url('aqua/blueMotive.jpg');
-	background-repeat: repeat;	
-	color: #ffffff;
-	font-size: 150%;
+	background-repeat: repeat;
+	margin-bottom: 1px;
+	padding: 4px;
 }
 
-.claroTopBanner .platformBanner  a {
-	color: #FFFFFF;
+#platformBanner a,
+#platformBanner a:active,
+#platformBanner a:link,
+#platformBanner a:visited
+{
+	text-decoration: none;
+   	color: #FFF;
 }
 
-.claroTopBanner .platformBanner  a:hover {
-	color: #000000;
+#platformBanner a:hover
+{
+	color: #000;
+}
+
+div#siteName
+{
+	float: left;
+	text-align: left;
+}
+
+div#institution
+{
+	text-align: right;
 }
 
  /*----------------------------------------------------------------------------
                                    USER LINE
  ----------------------------------------------------------------------------*/
-
-.claroTopBanner .userBanner {
-		background-color:#E0FFFF;
-		background-image: url('aqua/gradiantBlue600.jpg');
-		background-repeat: repeat-y;
-		color: #ffffff;
-		font-size: 80%;
-		margin-top:1px;
-		
+div#userBanner
+{
+	background-color:#E0FFFF;
+	background-image: url('aqua/gradiantBlue600.jpg');
+	background-repeat: repeat-y;
+	color: #ffffff;
+	font-size: 80%;
+	padding: 4px;
 }
 
-.claroTopBanner .userBanner a,
-.claroTopBanner .userBanner a:link,
-.claroTopBanner .userBanner a:visited {
-		color: #ffffff;
+#userBanner a,
+#userBanner a:active,
+#userBanner a:link,
+#userBanner a:visited
+{
+	text-decoration: none;
+    color: #FFF;
 }
-.claroTopBanner .userBanner a:hover {
-		color: #000000;
+
+#userBanner a:hover
+{
+    color: #FFF;
+	text-decoration: underline;
+}
+div#userLinks
+{
+	text-align: left;
 }
 
  /*----------------------------------------------------------------------------
                                   COURSE LINE
  ----------------------------------------------------------------------------*/
 
-.claroTopBanner .courseBanner {
-		background-color:#E0FFFF;
-		background-image: url('aqua/gradiantBlue600.jpg');
-		background-repeat: repeat-y;
-		color: #003366;
-		font-weight:bold;
-    border-top:1px solid #FFF;
+#courseBanner
+{
+   	padding: 4px;
+	background-color:#E0FFFF;
+	background-image: url('aqua/gradiantBlue600.jpg');
+	background-repeat: repeat-y;
+	color: #036;
+	font-weight:bold;
 }
 
-.claroTopBanner .courseBanner p {
-	margin: 0px;
+#course
+{
+	text-align: left;
 }
 
-.claroTopBanner .courseBanner p .courseName {
+#course span
+{
+   	display: block;
+}
+
+#courseToolList
+{
+	float: right;
+    text-align: right;
+}
+
+#courseBanner .courseName {
 	font-size: 120%;
 }
 
-.claroTopBanner .courseBanner p .courseCode {
+#courseBanner .courseName a,
+#courseBanner .courseName a:active,
+#courseBanner .courseName a:link,
+#courseBanner .courseName a:visited
+{
+	color: #191970;
+	text-decoration: none;
+}
+
+#courseBanner .courseName a:hover
+{
+	color: #fff;
+}
+
+#courseBanner .courseCode {
 	font-size: 80%;
 }
 
-
-.claroTopBanner .courseBanner a,
-.claroTopBanner .courseBanner a:link,
-.claroTopBanner .courseBanner a:visited {
-		color:#191970;
-}
-	
-.claroTopBanner .courseBanner a:hover {
-		color:#ffffff;
+#courseBanner form
+{
+	padding: 5px;
+	margin: 0;
 }
  /*----------------------------------------------------------------------------
                                   BREAD CRUMB TRAIL
  ----------------------------------------------------------------------------*/
 
-.claroBreadCrumbTrail {
+#breadCrumbLine
+{
 	font-size: 80%;
 }
 
-.claroBreadCrumbTrail a,
-.claroBreadCrumbTrail a:link,
-.claroBreadCrumbTrail a:visited {
-		color:#191970;
-}
-	
-.claroBreadCrumbTrail a:hover {
-		color:#4169E1;		
+#breadCrumbLine hr
+{
+	display: none;
 }
 
+#breadCrumb{}
 
+#breadCrumb a,
+#breadCrumb a:active,
+#breadCrumb a:link,
+#breadCrumb a:visited
+{
+	color:#191970;
+}
+
+#breadCrumb a:hover
+{
+    color:#4169E1;
+}
+
+#toolViewOption
+{
+	float: right;
+	text-align: right;
+}
 
 /******************************************************************************
                              CLAROLINE BODY
  ******************************************************************************/
 
-claroBody  {
-
-}
+claroBody {}
 
 
 
@@ -183,20 +220,34 @@ claroBody  {
                               CLAROLINE FOOTER
  ******************************************************************************/
 
-.claroFooter  {
-	
+#footer
+{
 	font-size: 80%;
 }
 
-.claroFooter a, 
-.claroFooter a:visited, 
-.claroFooter a:active {	
-}
-	
-.claroFooter a:hover {
+#footer hr
+{
+	border: 0;
+	height: 1px;
+	background-color: gray;
 }
 
+#platformManager
+{
+	float: left;
+}
 
+#poweredBy
+{
+	float: right;
+	text-align: right;
+}
+
+#courseManager
+{
+	margin: auto;
+	text-align: center;
+}
 
 
 /******************************************************************************
