Oubli de Seb  :)) : Underline on mouse over on course name in the banner

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -147,6 +147,11 @@ div#userLinks
 	text-decoration: none;
 }
 
+#courseBanner .courseName a:hover
+{
+text-decoration: underline;
+}
+
 #courseBanner .courseCode {
 	font-size: 80%;
 }
